[package]
name = "snid"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
console-subscriber = "0.5.0"
futures = "0.3.31"
jemallocator = { version = "0.5.4", optional = true }
libc = "0.2.171"
prost = "0.14.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.17"
tokio = { version = "1.44.1", features = ["rt", "sync", "net", "signal", "tracing"] }
tokio-serial = "5.4.5"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.14"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14.2"

[profile.release-debuginfo]
inherits = "release"
debug = 1

[features]
jemallocator = ["dep:jemallocator"]
